# Renee_Paper

./: .gitignore  README.md  debug_fields.py  fetch_case_html.py  main.py  pyproject.toml  test_search.py
scripts/: collect_filings.py
src/: SEC_API_HEADERS.py  SEC_Download_10k.py  SEC_Get_Company_10k_Index.py  SEC_Get_Company_Directory.py
src/scac/: client.py
